src/test/ui/thread-local-static.stderr
error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/thread-local-static.rs:7:12
   |
LL | const fn g(x: &mut [u32; 8]) {
   |            ^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0625]: thread-local statics cannot be accessed at compile-time
  --> $DIR/thread-local-static.rs:9:28
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                            ^^^^^^^^^^^^

error[E0013]: constant functions cannot refer to statics
  --> $DIR/thread-local-static.rs:9:28
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                            ^^^^^^^^^^^^
   |
   = help: consider extracting the value of the `static` to a `const`, and referring to that

error[E0658]: mutable references are not allowed in constant functions
  --> $DIR/thread-local-static.rs:9:23
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                       ^^^^^^^^^^^^^^^^^
   |
   = note: see issue #57349 <https://github.com/rust-lang/rust/issues/57349> for more information
   = help: add `#![feature(const_mut_refs)]` to the crate attributes to enable

error[E0015]: calls in constant functions are limited to constant functions, tuple structs and tuple variants
  --> $DIR/thread-local-static.rs:9:5
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0133]: use of mutable static is unsafe and requires unsafe function or block
  --> $DIR/thread-local-static.rs:9:23
   |
LL |     std::mem::swap(x, &mut STATIC_VAR_2)
   |                       ^^^^^^^^^^^^^^^^^ use of mutable static
   |
   = note: mutable statics can be mutated by multiple threads: aliasing violations or data races will cause undefined behavior

error: aborting due to 6 previous errors

Some errors have detailed explanations: E0013, E0015, E0133, E0658.
For more information about an error, try `rustc --explain E0013`.
